[package]
name = "yew_component_library"
version = "0.1.0"
edition = "2021"
description = "Yew.rs component libary for Brooks Builds. These components are worked on both on stream, and off at https://twitch.tv/brookzerker."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version = "0.10.0", features = ["yew_integration"] }
yew-router = "0.16.0"